changed multiplication by a pow of two to bit shift